# video-codec-compression-suite

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: prepare_yuv.yaml
configs/codecs/: av1_ffmpeg.yaml  h264_ffmpeg.yaml  h264_jm.yaml  h265_hm.yaml  h266_vtm.yaml  vp9_ffmpeg.yaml
configs/examples/: free_grass_h265_ffmpeg.yaml  free_grass_prepare_yuv.yaml
src/vccs/: __init__.py  cli.py  compress.py  config.py  prepare.py  quality.py  utils.py
src/vccs/logs/: schema.py
